fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -365,7 +365,8 @@ code {
  */
 
 .typewriter-section {
-    height: 200;
+    height: 200px;
+    line-height: 200px;
 }
 
 #typewriter-title {
